--- a/css/stylehome.css
+++ b/css/stylehome.css
@@ -16,51 +16,6 @@ body {
     background-color: #111;
 }
 
-header {
-    height: 7vh;
-    display: flex;
-    align-items: center;
-    justify-content: end;
-    background-color: #333;
-}
-
-.dropdown {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border: none;
-    margin-right: 60px;
-}
-
-.btn-secondary {
-    color: #fff;
-    background: transparent;
-    border: none;
-}
-
-.btn-secondary:hover {
-    color: #fff;
-    background-color: none;
-    border-color: none;
-}
-
-.btn-check:focus+.btn, .btn:focus {
-    box-shadow: none;
-}
-
-.dropdown-menu li {
-    margin: 10px 0px;
-}
-
-.dropdown-menu a {
-    color: white;
-}
-
-ul.dropdown-menu.show {
-    display: block;
-    margin-top: 1rem;
-}
-
 .scroll-to-top {
     display: none;
     position: fixed;
@@ -361,41 +316,80 @@ a {
 }
 
 .main {
-    width: 96%;
+    width: 100%;
     /* border: 1px red solid; */
-    margin: 3rem 2rem 2rem 2rem;
-    font-size: calc(20px + 1vmin);
-    font-weight: bolder;
-    color: rgba(255, 255, 255, 0.7);
+    color: white;
+    padding: 2rem 4rem 2rem 4rem;
 }
 
-.main p {
-    margin-left: 10px;
+.box {
+    display: flex;
+    flex-direction: row;
+    margin-top: 5rem;
+    padding-bottom: 5rem;
+    border-bottom: 2px solid #5b5b5bae;
 }
 
-.rows {
-    /* border: 1px green solid; */
-    margin-top: 5px;
-    margin-bottom: 7%;
-    display: grid;
-    grid-template-columns: 9% 9% 9% 9% 9% 9% 9% 9% 9% 9% 9%;
-    justify-items: stretch;
-    align-items: stretch;
-    column-gap: 1.1%;
+.box-picture {
+    height: 20rem;
 }
 
-.rows img {
+.box-picture img {
     height: 100%;
     box-shadow: 2px 2px 8px 4px rgba(0, 0, 0, 0.2);
-    border-radius: 2px;
+    border-radius: 5px;
 }
 
-.main img {
+.box-content {
+    /* border: 1px red solid; */
+    width: 100%;
+    display: grid;
+    grid-template-rows: 20% 50% 10%;
+    padding-left: 2rem;
+}
+
+.box-title {
+    /* border: 1px red solid; */
+    width: 100%;
+    font-size: 70px;
+    font-weight: bolder;
+}
+
+.box-description {
+    /* border: 1px red solid; */
+    width: 100%;
+    font-size: 20px;
+    font-weight: bold;
+    display: flex;
+    align-items: center;
+}
+
+.box-genre {
+    font-size: 16px;
+    display: flex;
+    flex-direction: row;
+    column-gap: 1rem;
+    /* border: 1px red solid; */
+    color: rgba(255, 255, 255);
+    height: calc(16px + 2vmin);
+}
+
+.box-genre p {
+    background-color: #333333db;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 2rem;
+}
+
+.box-picture img {
     transition: transform 0.5s;
     transition-delay: 0s;
 }
 
-.main img:hover {
-    transform: scale(2);
+.box-picture img:hover {
+    transform: scale(1.2);
     transition-delay: 0.3s;
 }
