--- a/css/stylegenre.css
+++ b/css/stylegenre.css
@@ -21,14 +21,33 @@ body {
     padding: 0px 10%;
     /* border: 1px red solid; */
     margin: 3rem 2rem 2rem 2rem;
-    /* font-size: calc(20px + 1vmin);
-    font-weight: bolder;
-    color: rgba(255, 255, 255, 0.7); */
+    /* font-size: calc(20px + 1vmin); */
+    /* font-weight: bolder; */
+    /* color: rgba(255, 255, 255, 0.7); */
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-    row-gap: 5%;
+    grid-template-columns: 13rem 13rem 13rem 13rem 13rem;
+    column-gap: 2rem;
+    row-gap: 2rem;
     align-items: center;
     justify-content: center;
+}
+
+@media only screen and (max-width: 1180px) {
+    .main {
+        grid-template-columns: 13rem 13rem 13rem 13rem;
+    }
+}
+
+@media only screen and (max-width: 940px) {
+    .main {
+        grid-template-columns: 13rem 13rem 13rem;
+    }
+}
+
+@media only screen and (max-width: 640px) {
+    .main {
+        grid-template-columns: 13rem 13rem;
+    }
 }
 
 .image {
@@ -36,16 +55,20 @@ body {
     justify-content: center;
     align-items: center;
     height: 38vh;
+    width: 100%;
     /* border: 1px red solid; */
 }
 
-.main img {
+.image img {
     transition: transform 0.5s;
     transition-delay: 0s;
     height: 100%;
+    width: 100%;
+    border-radius: 5px;
+    
 }
 
-.main img:hover {
+.image img:hover {
     transform: scale(1.3);
     transition-delay: 0.3s;
 }
